--- a/package.json
+++ b/package.json
@@ -29,19 +29,14 @@
   },
   "devDependencies": {
     "dependency-check": "^2.6.0",
-    "ghooks": "^1.3.2",
+    "husky": "^0.13.1",
     "jest": "^18.0.0",
     "rimraf": "^2.5.4",
     "standard": "^8.6.0"
   },
   "scripts": {
-    "depcheck": "dependency-check ./package.json",
-    "lint": "standard",
-    "posttest": "npm run lint && npm run depcheck"
-  },
-  "config": {
-    "ghooks": {
-      "commit-msg": "npm test"
-    }
+    "commitmsg": "npm test",
+    "posttest": "standard && dependency-check ./package.json",
+    "test": "jest"
   }
 }
